# pi_drone_client

./: CMakeLists.txt  README.md  client_sock.cpp  client_sock.hpp  install.sh  main.cpp  pi_drone_client.kdev4
